# financial-analytics-keppler

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_REPORT.md  README.md  main.py  modify_proposal.py  pyproject.toml  s
airflow/dags/: bureau_governance_dag.py  installment_analytics_dag.py  payment_features_dag.py  schema_governance_dag.py
airflow/tasks/: bureau_aggregations.py  elt_tasks.py  installment_aggregations.py  payment_behavior_features.py  schema_manager.py
ci_cd/github_actions/: tests.yml
common/utils/: db_client.py  logger.py  parquet_utils.py  s3_client.py  schema_utils.py  spark_session.py  time_utils.py
database/ddl/: 00_create_shema.sql  01_dim_customer.sql  02_dim_time.sql  03_dim_product.sql  04_dim_risk_segment.sql  05_dim_source_system.sql  06_fact_application.sql  07_fact_loan.sql  08_fact_payment.sql  09_indexes.sql  10_constraints.sql
db/: create_control_tables.sql
dbt/: dbt_project.yml
diamond/: README.md
docs/: AI_CONTEXT.md  ARCHITECTURE_FLOWS.md  DEMO_WALKTHROUGH.md  FASE2_VALIDATION.md  INFRASTRUCTURE_PROPOSAL.md  PLAN_ESCENARIO_C_DEFINITIVO.md  SETUP_SUPERSET.md  TEAM_GUIDE.md
docs/analytics/: data_profiler.py  run_profiling.py
docs/architecture/: REFACTORING_SUMMARY.md  bronze-ingestion.md  overview.md  project-structure.md  (+1 more)
ingestion/: README.md  ingest_local_datasets_to_s3.py
master/: airflow.env  docker-compose.yml  startup.sh
monitoring/: docker-compose.yml  prometheus.yml
notas/: eda_home_credit_arquitectura.md
quality/: data_quality_report.py  metrics_exporter.py
scripts/: cleanup.sh  setup_env.sh  validate_quality.sh
spark/: Dockerfile  docker-compose.yml
tests/: test_elt_tasks.py  test_pipeline_tasks.py
worker/: requirements.txt
(+147 files in other folders)
