[project]
name = "financial-analytics-keppler"
version = "0.1.0"
description = "Financial Risk Data Platform - Caso 5: Descontrol Operacional y Riesgo Crediticio"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "boto3>=1.28",
    "requests>=2.31",
    "pyspark>=3.5",
    "delta-spark>=3.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "great-expectations>=0.18",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
dbt = [
    "dbt-core>=1.7",
    "dbt-postgres>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
