[project]
name = "financial-analytics-keppler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.35",
    "great-expectations>=1.18.0",
    "kaggle>=2.2.2",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pypdf>=6.13.2",
    "requests>=2.34.2",
]
